# franka_sim

./: .gitignore  .pre-commit-config.yaml  README.md  config_torchrl_ppo.yaml  pyproject.toml  run.py  setup.sh  test_torchrl.py
franka_sim/: __init__.py
franka_sim/envs/: __init__.py  panda_pick_gym_env.py
franka_sim/envs/xmls/: arena.xml
franka_sim/test/: test_gym_env_render.py
